--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
 	<title>Vicious Cycles Home Page</title>
 	<meta charset="utf-8">
+	<style>
+		body {background-color: #E7FBFB;}
+		header {font-size: 4em;
+				text-align: center;
+				color: #010B5B
+			   }
+	</style>
 </head>
 
 <body>
